Make ScopedArena an abstract class